[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Graphics/Menu/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Fonts/menuBig.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/ChapterScreen.gd" type="Script" id=4]
[ext_resource path="res://Resources/Shaders/OneBit.tres" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )

[node name="ChapterScreen" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 300.0
custom_constants/margin_top = 160
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2"]
material = SubResource( 1 )
margin_top = 171.0
margin_right = 1920.0
margin_bottom = 288.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Chapter Select"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -229.5
margin_right = 743.0
margin_bottom = 933.5
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 972.0
margin_bottom = 1185.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chapter1Button" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 2 )
margin_right = 952.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Chapter 001"
expand_icon = true

[node name="Chapter2Button" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 3 )
margin_top = 233.0
margin_right = 952.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Chapter 010"
expand_icon = true

[node name="Chapter3Button" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 4 )
margin_top = 466.0
margin_right = 952.0
margin_bottom = 649.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Chapter 011"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Chapter4Button" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 4 )
margin_top = 699.0
margin_right = 952.0
margin_bottom = 882.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Chapter 100"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 932.0
margin_right = 952.0
margin_bottom = 932.0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 5 )
margin_top = 982.0
margin_right = 952.0
margin_bottom = 1165.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/Chapter1Button" to="." method="_on_Chapter1Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Chapter2Button" to="." method="_on_Chapter2Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Chapter3Button" to="." method="_on_Chapter3Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Chapter4Button" to="." method="_on_Chapter4Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
